[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/images/AMaze_Background-04.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/RobotoSlab-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 80
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 80
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=3]

size = 80
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 80
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[node name="GameOver" type="Node"]

script = ExtResource( 1 )

[node name="TransitionTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="BackgroundImage" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -2.0
margin_right = 1281.0
margin_bottom = 796.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="TextLabel" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -2.0
margin_top = 47.0
margin_right = -2.0
margin_bottom = 153.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.937255, 0.34902, 0.156863, 1 )
text = "Λάθος Επιλογή!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="TryAgainButton" type="Button" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -223.0
margin_top = -78.0
margin_right = 222.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.34902, 0.156863, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Παίξε Ξανά"
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ExitButton" type="Button" parent="." index="4"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -173.0
margin_top = -181.0
margin_right = 172.0
margin_bottom = -53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.937255, 0.34902, 0.156863, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Έξοδος"
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="MainMenuButton" type="Button" parent="." index="5"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -281.0
margin_top = -315.0
margin_right = 280.0
margin_bottom = -203.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.937255, 0.34902, 0.156863, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Αρχικό Μενού"
flat = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[connection signal="timeout" from="TransitionTimer" to="." method="_on_TransitionTimer_timeout"]

[connection signal="pressed" from="TryAgainButton" to="." method="_on_TryAgainButton_pressed"]

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]


