extends Node

# class member variables go here, for example:
# var a = 2
# var b = "textvar"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass

#func _process(delta):
#	# Called every frame. Delta is time since last frame.
#	# Update game logic here.
#	pass


func _on_TryAgainButton_pressed():
	$TransitionTimer.start()


func _on_ExitButton_pressed():
	get_tree().quit()


func _on_TransitionTimer_timeout():
	get_tree().change_scene("res://scenes/PregameStart.tscn")


func _on_MainMenuButton_pressed():
	get_tree().change_scene("res://scenes/MainMenu.tscn")
